# receipt-agent

./: .env.copy  .gitignore  AGENTS.md  README.md  agent.py  main.py  pyproject.toml  render.yaml  telegram_webhook.py
app/: __init__.py  agent.py  cli.py  config.py  db.py  main.py  models.py  operations.py
tests/: test_telegram_webhook.py
