[project]
name = "receipt_agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "logfire[fastapi]>=4.3.6",
    "pydantic-ai[logfire]>=0.8.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pyngrok>=7.3.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
